# lightmetrica

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  aabb_8h_source.html  align_8h_source.html  annotated.html  appveyor.yml  assert_8h_source.html  asset_8h_source.html  assets_8h_source.html  base_8math_8h_source.html  base_8perf_8h_source.html  bitmap_8h_source.html  bitmapfilm_8h_source.html  bitmaptexture_8h_source.html  boundingsphere_8h_source.html  bpt_8common_8h_source.html  bpt_8fullpath_8h_source.html  bpt_8mis_8h_source.html  bpt_8pool_8h_source.html  bpt_8subpath_8h_source.html  bsdf_8h_source.html  camera_8h_source.html  camerasampler_8h_source.html  class_aligned-members.html  class_aligned.html  class_area_light-members.html  class_area_light.html  class_area_light_test-members.html  class_area_light_test.html  class_asset-members.html  class_asset.html  class_asset_test-members.html  class_asset_test.html  class_assets-members.html  class_assets.html  class_assets_impl-members.html  (+660 more)
cmake/: FindAssimp.cmake  FindEmbree.cmake  FindFreeImage.cmake  FindGLEW.cmake  PCHTargets.cmake  ssecheck.cpp
experiments/: compare_all.py  compare_error_dist_screen.py  compare_subpaths_vertices_sum.py  convert_hdr_to_png.py  create_table.py  create_test_images.py  exputil.py  heatmap.py  horizontal_arrange.py  plot_progress.py  plot_pssmlt_density.py  plot_pssmlt_hist2d.py  plot_pssmlt_length.py  plot_pssmlt_traceplot.py  plot_pssmlt_traceplot_with_length.py  plot_rmse.py  render_all.py  resolve_template.py
include/lightmetrica/: aabb.h  aabb.inl  align.h  arealight.h  assert.h  asset.h  assetfactory.h  assets.h  assets.inl  bitmap.h  bitmapfilm.h  bitmaptexture.h  boundingsphere.h  bpt.common.h  bpt.config.h  bpt.fullpath.h  bpt.h  bpt.mis.h  bpt.path.h  bpt.pool.h  bpt.subpath.h  bsdf.h  bsdffactory.h  bvhscene.h  camera.h  camerafactory.h  camerasampler.h  common.h  component.h  config.h  confignode.h  configurablesampler.h  dagpt.common.h  dagpt.defaulteval.h  dagpt.eval.h  dagpt.graph.h  dagpt.h  dagpt.pathtrace.h  dagpt.pool.h  dagpt.sampler.h  (+115 more)
include/lightmetrica.test/: base.h  base.math.h  common.h  proxylistener.h  stub.asset.h  stub.assetfactory.h  stub.assets.h  stub.bsdf.h  stub.config.h  stub.film.h  stub.trianglemesh.h  testscenes.h
include/nanon/: aabb.h  aabb.inl  align.h  arealight.h  asset.h  assetfactory.h  assets.h  avx.h  avxmatrix.h  bsdf.h  (+94 more)
include/nanon.test/: base.h  base.math.h  common.h  stub.asset.h  stub.assets.h  stub.bsdf.h  stub.trianglemesh.h
pch/: pch.plugin.h
plugin/: CMakeLists.txt
plugin/plugin.diffusemirror/: CMakeLists.txt  diffusemirror.cpp
plugin/plugin.embree/: CMakeLists.txt  scene.embree.cpp
plugin/plugin.pathtrace.mpi/: CMakeLists.txt  pathtrace.mpi.cpp
plugin/plugin.test/: CMakeLists.txt  test.cpp
scripts/: deploy_doc.sh  deploy_gh-pages.sh  install_assimp.sh  install_doxygen.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+107 more)
src/liblightmetrica/: CMakeLists.txt  align.cpp  arealight.cpp  asset.cpp  assetfactory.cpp  assets.cpp  bitmap.cpp  bitmaptexture.cpp  bpt.config.cpp  bpt.cpp  bpt.fullpath.cpp  bpt.mis.power.cpp  bpt.mis.powerheuristics.cpp  bpt.mis.powernaive.cpp  bpt.mis.simple.cpp  bpt.path.cpp  bpt.pool.cpp  bpt.subpath.cpp  bsdf.cpp  bsdffactory.cpp  bvhscene.cpp  camera.cpp  camerafactory.cpp  component.cpp  config.cpp  confignode.cpp  constanttexture.cpp  dagpt.cpp  dagpt.defaulteval.cpp  dagpt.graph.cpp  dagpt.pathtrace.cpp  dagpt.pool.cpp  dagpt.samplerfactory.cpp  defaultassets.cpp  defaultbitmaptexture.cpp  defaultconfig.cpp  defaultexperiments.cpp  defaultexptfactory.cpp  defaultexpts.cpp  dielectric.cpp  (+94 more)
src/libnanon/: CMakeLists.txt  align.cpp  arealight.cpp  asset.cpp  assetfactory.cpp  assets.cpp  bsdf.cpp  bsdffactory.cpp  bvhscene.cpp  camera.cpp  camerafactory.cpp  config.cpp  defaultassets.cpp  diffuse.cpp  film.cpp  filmfactory.cpp  hdrfilm.cpp  light.cpp  lightfactory.cpp  logger.cpp  materialfactory.cpp  naivescene.cpp  object.cpp  objmesh.cpp  pathtrace.cpp  pch.h  perspectivecamera.cpp  pugihelper.cpp  qbvhscene.cpp  random.cpp  rawmesh.cpp  raycast.cpp  renderer.cpp  rendererfactory.cpp  scene.cpp  scenefactory.cpp  simdsupport.h.in  test.cpp  texture.cpp  texturefactory.cpp  (+4 more)
src/lightmetrica.test/: .test.math.vector.cpp.swp  CMakeLists.txt  main.cpp  pch.h  test.arealight.cpp  test.asset.cpp  test.assets.cpp  test.bitmap.cpp  test.bitmaptexture.cpp  test.bpt.fullpath.cpp  test.bpt.fullpath2.cpp  test.bpt.mis.cpp  test.bpt.mis.power.cpp  test.component.cpp  test.config.cpp  test.confignode.cpp  test.defaultassets.cpp  test.defaultconfig.cpp  test.defaultexpts.cpp  test.generalizedbsdf.cpp  test.hdrfilm.cpp  test.logger.cpp  test.math.basic.cpp  test.math.distribution.cpp  test.math.matrix.cpp  test.math.stats.cpp  test.math.transform.cpp  test.math.vector.cpp  test.objmesh.cpp  test.pathutils.cpp  test.perspectivecamera.cpp  test.plugin.cpp  test.pm.photonmap.cpp  test.primitives.cpp  test.pssmlt.sampler.cpp  test.qbvhscene.cpp  test.rawmesh.cpp  test.scene.cpp  test.scene.intersection.cpp  test.specularbsdf.cpp  (+1 more)
src/nanon.test/: CMakeLists.txt  base.cpp  base.h  base.math.cpp  base.math.h  common.h  main.cpp  pch.h  stub.asset.cpp  stub.asset.h  stub.assetfactory.cpp  stub.assetfactory.h  stub.assets.h  stub.bsdf.h  stub.trianglemesh.h  test.asset.cpp  test.assets.cpp  test.config.cpp  test.defaultassets.cpp  test.hdrfilm.cpp  test.logger.cpp  test.math.matrix.cpp  test.math.transform.cpp  test.math.vector.cpp  test.matrix.cpp  test.objmesh.cpp  test.perspectivecamera.cpp  test.qbvhscene.cpp  test.rawmesh.cpp  test.scene.cpp  test.scene.intersection.cpp  test.vector.cpp
(+29 files in other folders)
